# Final-MVP-submission

./: README.md
UI-FOODBRIDGE/: README.md  package-lock.json  package.json
UI-FOODBRIDGE/public/: Inventory_Master_Analysis_final.csv  Monthly_Buy_Suggestions.csv
UI-FOODBRIDGE/src/: App.jsx  FoodBridge.jsx
ml_model/: Data for Analysis - Inventory UTF.csv  Data for Analysis - Inventory.csv  Data for Analysis.xlsx  Kyle_decision_tree.py  LICENSE  PSU_Fall_Suggestions_Predictions.csv  PSU_Inventory_Time_Series.csv  PSU_Seasonal_Trends.csv  PSU_Spring_Suggestions.csv  README.md  foodbridge-decision-tree-test.py  foodbridge-decision-tree-testOLD.py  pyproject.toml  train_model.py
ml_model/Model/: Inventory_Master_Analysis_final.csv  model.py
ml_model/data-processing/: Data for Analysis.xlsx - Inventory.csv  Inventory_Master_Analysis.csv  Inventory_Master_Analysis_final.csv  main.py
