[project]
name = "FoodBridge"
version = "0.1.0"
requires-python = ">=3.11, <3.12"

[project.description]
text = "FoodBridge project"
```

Save the file. That's it.

---

**Your project folder should now look like this:**
```
FoodBridge/
├── pyproject.toml
├── requirements.txt
├── venv/
└── your_scripts.py